Fix overflow culprit and refactor classdocuments

--- a/resources/css/views/aydinlatma.scss
+++ b/resources/css/views/aydinlatma.scss
@@ -7,7 +7,7 @@ table {
 }
 
 td {
-  padding: 1em;
+  padding: 1vw;
   border: solid 1px black;
 }
 
@@ -16,7 +16,7 @@ td {
   flex-direction: row;
   background: variables.$clr_brand_gradient;
 
-  a {
+  .document {
     margin: 0 5vw 0 0;
     padding: 1vh 1vw;
     flex: 1;
@@ -74,10 +74,6 @@ td {
       img {
         width: 50px;
         margin: 0 2vw 0 0;
-      }
-
-      h1 {
-        font: 500 12px Montserrat, sans-serif;
       }
     }
   }
